[package]
name = "coralseq"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
figlet-rs = "0.1.5"
handlebars = "6.4.0"
rayon = "1.11.0"
rocket = "0.5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["sqlite"] }
walkdir = "2.5.0"
